kubernetes/apps/flux-system/capacitor/app/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
   hajimari.io/enable: "true"
   hajimari.io/icon: simple-icons:capacitor
   hajimari.io/group: "Public"
   #nginx.ingress.kubernetes.io/auth-url: http://authelia.kube-system.svc.cluster.local/api/verify
   #nginx.ingress.kubernetes.io/auth-signin: https://auth.${SECRET_DOMAIN}
  name: capacitor
  namespace: tools
spec:
  ingressClassName: internal
  rules:
  - host: &host "capacitor.${SECRET_DOMAIN}"
    http:
      paths:
      - backend:
          service:
            name: capacitor
            port:
              number: 9000
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - *host
